--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,32 @@
 name: CI for chinook pipeline
-on:
+on: 
   push:
     branches: [dev]
 jobs:
   push_to_databricks:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout current repository
         uses: actions/checkout@v4
-      - name: Install python
+      - name: Set up python
         uses: actions/setup-python@v5
         with:
           python-version: 3.9
-      - name: Databricks CLI install and config
+      - name: Databricks CLI config
         run: |
-          pip install databricks-cli
-          cat ~/.databrickscfg << EOF
-          [DEFUALT]
-          host = ${{ secrets.DATABRICKS_HOST_URL }}
-          token = ${{ secrets.DATABRICKS_TOKEN }}
-          job-api-version = 2.1
-          EOF
-      - name: Deploy pipeline to databricks
+            pip install databricks-cli
+            cat > ~/.databrickscfg << EOF
+            [DEFAULT]
+            host = ${{ secrets.DATABRICKS_HOST_URL }}
+            token = ${{ secrets.DATABRICKS_TOKEN }}
+            jobs-api-version = 2.1
+            EOF
+      - name: Deploy code to databricks workspace
         run: |
-          databricks workspace import "pipeline.py" "/Workspace/Users/monthira.t@ppp.co.th/test/pipeline" --language python --overwrite
-      - name: Deploy test to databricks
+            databricks workspace import "pipeline.py" "/Workspace/Users/monthira.t@ppp.co.th/test/pipeline" --language python --overwrite
+      - name: Deploy test to databricks workspace
         run: |
-          databricks workspace import "test.py" "/Workspace/Users/monthira.t@ppp.co.th/test/test" --language python --overwrite
-      - name: run test job
+            databricks workspace import "test.py" "/Workspace/Users/monthira.t@ppp.co.th/test/test" --language python --overwrite
+      - name: Run test job
         run: |
-          databrick jobs run-now --job-id 331299547184238
+            databricks jobs run-now --job-id 331299547184238
